cabal-version:  >= 1.10
name:           constant-propagations
version:        1.0.0
build-type:     Configure
extra-source-files:
    cbits/wrappers.c
    include/wrappers.h
    autoconf.ac
    configure
    README.md

source-repository head
  type: git
  location: https://github.com/mlfbrown/apron-bindings

library
  C-sources: cbits/wrappers.c
  Include-dirs: include
  Includes: wrappers.h
  Install-includes: wrappers.h
  exposed-modules:
      Num.Mpfr
      Apron.Manager
      Apron.Var
      Apron.Scalar
      Apron.Interval                  
      Apron.Coeff                  
      Apron.Dimension
      Apron.Disjunction
      Apron.Environment
      Apron.Linexpr1                  
      Apron.Generator1                                    
      Apron.Policy
      Apron.ReducedProduct
      Apron.Lincons1
      Apron.Texpr1                  
      Apron.Tcons1
      Apron.Abstract1
      AbstractMonad
      Types
      Environment                  
      Coeff
      Interval            
      Linexpr1
      Lincons1
      Texpr1
      Tcons1            
      Abstract1
      Apron
      Examples.Example1
  other-modules:
      Paths_apron_bindings
  hs-source-dirs:
      src
  ghc-options: -Wall
  extra-libraries:
      apron, boxD
  build-tools:
      c2hs
  build-depends:
      mtl
    , containers >=0.6.2.1            
    , base >=4.7 && <5
  default-language: Haskell2010

executable apron-bindings-exe
  main-is: Main.hs
  other-modules:
      Paths_apron_bindings
      Eval
      Init
      Loop
      Operation
      Parser
      Printer
      Symbol
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      language-c
    , apron-bindings
    , pretty
    , containers >=0.6.2.1
    , mtl >=2.2.2                
    , base >=4.7 && <5
  default-language: Haskell2010
