cabal-version:  >= 1.10
name:           constant-propagation
version:        1.0.0
build-type:     Configure
extra-source-files:
    autoconf.ac
    configure
    README.md

source-repository head
  type: git
  location: https://github.com/Jiangkm3/Constant-Propagation

library
  exposed-modules:
    AbstractMonad
    Abstract1
    Texpr1
    Tcons1
    Apron.Var
    Apron.Environment
    Apron.Scalar
    Apron.Lincons1
  hs-source-dirs:
    src
  ghc-options: -Wall
    base >=4.7 && <5
  default-language: Haskell2010

executable constant-propagation-exe
  main-is: Main.hs
  other-modules:
      Eval
      Init
      Loop
      Operation
      Parser
      Printer
      Symbol
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      language-c
    , pretty
    , containers >=0.6.2.1
    , mtl >=2.2.2                
    , base >=4.7 && <5
  default-language: Haskell2010
