cabal-version:  >= 1.10
name:           constant-propagation
version:        1.0.0
build-type:     Configure
extra-source-files:
    configure
    README.md

source-repository head
  type: git
  location: https://github.com/Jiangkm3/Constant-Propagation

library const-prop
  exposed-modules:
    Apron.AbstractMonad
    Apron.Abstract1
    Apron.Texpr1
    Apron.Tcons1
    Apron.Var
    Apron.Lincons1
    Apron.TexprOp
  hs-source-dirs:
    src
  build-depends:
      mtl >=2.2.2
    , containers >=0.6.2.1
    , base >=4.7 && <5
  default-language: Haskell2010

executable constant-propagation-exe
  main-is: Main.hs
  other-modules:
    Array
    Eval
    Init
    Operation
    Parser
    Printer
    Simplify
    Symbol
    Unroll
  hs-source-dirs:
    app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      const-prop
    , language-c
    , pretty
    , containers >=0.6.2.1
    , mtl >=2.2.2                
    , base >=4.7 && <5
  default-language: Haskell2010
